duck-md-core/tests/snapshots/snapshots__gfm_table.snap
---
source: duck-md-core/tests/snapshots.rs
assertion_line: 50
expression: out
---
{
  "frontmatter": null,
  "frontmatterRaw": "",
  "content": "| Lang | Year |\n| :--- | ---: |\n| Rust | 2010 |\n",
  "html": "[REDACTED_HTML]",
  "body": "[REDACTED_FACTORY_STRING]",
  "excerpt": "Lang Year Rust 2010",
  "metadata": {
    "readingTime": 1,
    "wordCount": 4
  },
  "toc": [],
  "imports": [],
  "exports": []
}
