duck-md-core/tests/snapshots/snapshots__skills_compile.snap
---
source: duck-md-core/tests/snapshots.rs
expression: out
---
{
  "frontmatter": {
    "description": "Install AI coding skills that teach your agent how to work with gentleduck/ui.",
    "title": "Agent Skills"
  },
  "frontmatter_raw": "title: Agent Skills\ndescription: Install AI coding skills that teach your agent how to work with gentleduck/ui.\n",
  "content": "Agent skills are markdown instruction files that teach AI coding assistants the APIs, patterns, and conventions of a codebase so they produce correct code on the first try.\n\n## Overview\n\ngentleduck/ui ships agent skills that teach AI coding assistants how to work with every package in the ecosystem. Skills follow the open [Agent Skills specification](https://agentskills.io/specification) and work with Claude Code, GitHub Copilot, Cursor, Cline, OpenCode, and 30+ other agents.\n\n## Install\n\n```bash\nnpx skills add gentelduck/ui\n```\n\nThis installs all available skills into your agent's configuration. Each skill is scoped to a single package so the agent only loads the context it needs.\n\nTo install a single skill instead of all of them:\n\n```bash\nnpx skills add gentelduck/ui --skill duck-primitives\n```\n\n## Available Skills\n\n| Skill | Package | What it covers |\n|---|---|---|\n| `duck-ui` | `@gentleduck/registry-ui` | Styled Tailwind components, variant system, compound patterns, coding style |\n| `duck-primitives` | `@gentleduck/primitives` | Headless a11y-first primitives, scoped context, Slot/asChild, Presence |\n| `duck-variants` | `@gentleduck/variants` | cva() variant function, Variants.VariantProps, Variants namespace, type inference |\n| `duck-cli` | `@gentleduck/cli` | CLI commands, template scaffolding, command authoring pattern |\n| `duck-vim` | `@gentleduck/vim` | Keyboard engine, hotkey parsing, sequences, React hooks |\n\n## MCP Documentation Server\n\nThe MCP server gives the agent live access to component APIs, code examples, and full-text search. The agent looks up information at generation time instead of relying on static skill instructions.\n\nThe docs site exposes an MCP server:\n\n```\nhttps://ui.gentleduck.org/api/mcp\n```\n\nAvailable MCP tools:\n\n- **list_docs**  -  list documentation pages by category\n- **read_doc**  -  read a full documentation page\n- **search_docs**  -  keyword search with typo tolerance\n- **get_component_api**  -  get props table for a component\n- **get_examples**  -  get code examples from a doc page\n- **get_changelog**  -  get changelog entries\n- **get_installation**  -  get setup guide for a framework\n- **suggest_components**  -  describe a need and get ranked suggestions\n- **semantic_search**  -  natural language search using TF-IDF\n\nTo connect your agent to the MCP server, add this to your project's `.mcp.json`:\n\n```json\n{\n  \"mcpServers\": {\n    \"duck-ui-docs\": {\n      \"type\": \"url\",\n      \"url\": \"https://ui.gentleduck.org/api/mcp\"\n    }\n  }\n}\n```\n\n## How Skills Work\n\nEach skill is a `SKILL.md` file with YAML frontmatter and markdown instructions:\n\n```markdown\n---\nname: duck-ui\ndescription: Use when working with styled @gentleduck/registry-ui components...\nallowed-tools: Read Grep Glob\n---\n\n# Instructions for the agent...\n```\n\nThe agent reads the `description` to decide when to activate the skill. The markdown body provides the actual instructions. Reference files in a `references/` subdirectory provide deeper context loaded on demand.\n\n## Contributing Skills\n\nWant to add a skill for a new package or improve an existing one? The general workflow is:\n\n1. Create a directory under `skills/` with a `SKILL.md` containing frontmatter and markdown instructions.\n2. Optionally add a `references/` subdirectory for detailed content the agent loads on demand.\n3. Test locally by symlinking into `.claude/skills/` and starting a new agent session.\n4. Open a pull request. The skill becomes installable as soon as it merges.\n\nSee the [skills README](https://github.com/gentelduck/ui/tree/master/skills) for the full authoring guide, quality checklist, and publishing instructions.\n",
  "html": "[REDACTED_HTML]",
  "body": "[REDACTED_FACTORY_STRING]",
  "excerpt": "Agent skills are markdown instruction files that teach AI coding assistants the APIs, patterns, and conventions of a codebase so they produce correct code on the first try. Overview gentleduck/ui ships agent skills that teach AI coding assistants how to work w…",
  "metadata": {
    "reading_time": 3,
    "word_count": 434
  },
  "toc": [
    {
      "title": "Overview",
      "url": "#overview",
      "items": []
    },
    {
      "title": "Install",
      "url": "#install",
      "items": []
    },
    {
      "title": "Available Skills",
      "url": "#available-skills",
      "items": []
    },
    {
      "title": "MCP Documentation Server",
      "url": "#mcp-documentation-server",
      "items": []
    },
    {
      "title": "How Skills Work",
      "url": "#how-skills-work",
      "items": []
    },
    {
      "title": "Contributing Skills",
      "url": "#contributing-skills",
      "items": []
    }
  ],
  "imports": [],
  "exports": []
}
